--- a/PAM/Views/_ViewImports.cshtml
+++ b/PAM/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using PAM
-@using PAM.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PAM
