--- a/PAM/Views/Login/Login.cshtml
+++ b/PAM/Views/Login/Login.cshtml
@@ -1,11 +1,6 @@
-﻿@model PAM.Models.Employee
-
-@{
+﻿@{
     ViewData["Title"] = "Login";
 }
-
-@using (Html.BeginForm("Login", "Login", FormMethod.Post))
-{
 <body>
     <div class="bg-display">
         <div class="login-container">
@@ -14,18 +9,14 @@
             </div>
             <span class="login-title"> Probation Access Manager </span>
 
-            <form asp-controller="Login" asp-action="Login" method="post" class="form-control">
+            <form asp-controller="Account" asp-action="Login" method="post" class="form-control">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input asp-for="Username" class="form-control" placeholder="Username" data-val-required="Username is required." />
-                    <span asp-validation-for="Username" class="text-danger"></span>
+                    <input name="username" class="form-control" placeholder="Username" data-val-required="Username is required." />
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <!--
-                    <input asp-for="password" class="form-control" type="password" data-val-required="Password is required." placeholder="Password" />
-                    <span asp-validation-for="password" class="text-danger"></span>
-                    -->
+                    <input name="password" class="form-control" type="password" data-val-required="Password is required." placeholder="Password" />
                 </div>
                 <button type="submit" class="btn btn-info btn-block" value="submit"> Login </button>
             </form>
@@ -39,4 +30,3 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
 </body>
-}
