--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model PAM.Models.Employee
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -17,15 +19,17 @@
 
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Home/MyRegistrations">Registrations</a>
+                </li>
+                <!--
                 <li class="nav-item active">
                     <a class="nav-link " href="/Home/Profile">Profile<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Home/MyRegistrations">My Registrations</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/Home/NewRegistrations">New Registrations</a>
                 </li>
+                -->
                 <li class="nav-item">
                     <a class="nav-link" href="/Home/Forms">Forms</a>
                 </li>
@@ -36,8 +40,8 @@
     <div class="container-fluid p-4">
         <div class="row">
             <div class="col-xl-2 mb-2">
-                <div class="card alert-dismissible text-white bg-dark">
-                    <button type="button" class="close" data-dismiss="card">&times;</button>
+                <div class="card text-white bg-dark">
+                    <button type="button" class="close" data-dismiss="card"></button>
                     <div class="card-header">
                         Welcome, 
                     </div>
