moving to desktop

--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
             </div>
             <span class="login-title"> Probation Access Manager </span>
 
-            <form asp-controller="Account" asp-action="Login" method="post" class="form-control">
+            <form asp-controller="Account" asp-action="Login" method="post" >
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input name="username" class="form-control" placeholder="Username" data-val-required="Username is required." />
