--- a/PAM/Views/Home/NewRegistrations.cshtml
+++ b/PAM/Views/Home/NewRegistrations.cshtml
@@ -13,7 +13,7 @@
              aria-valuemin="0" aria-valuemax="100">
         </div>
     </div>
-    <form asp-controller="Registrations" asp-action="Create" method="post">
+    <form asp-controller="Request" asp-action="Create" method="post">
         <div class="step">
             <p>Complete the registration process by following a few simple steps.</p>
             <div class="shadow-container">
@@ -27,42 +27,40 @@
                         <p> -Initiates first time registrations for new users and systems access. </p>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input asp-for="RequestTypeId" value="2" type="radio" class="custom-control-input" id="addAccess">
-                        <label class="custom-control-label label-edit" for="addAccess">Add Access</label>
-                        <p> -Initiates additional system(s) access (Bureau Chief's signature required). </p>
-
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input asp-for="RequestTypeId" value="3" type="radio" class="custom-control-input" id="removeAccess">
-                        <label class="custom-control-label label-edit" for="removeAccess"> Remove Access </label>
-                        <p> -Initiates removal access for individual system(s). </p>
-
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input asp-for="RequestTypeId" value="4" type="radio" class="custom-control-input" id="transfer">
+                        <input asp-for="RequestId" value="2" type="radio" class="custom-control-input" id="transfer">
                         <label class="custom-control-label label-edit" for="transfer"> Transfer </label>
                         <p> -Initiates changes to existing information when transferring caseload, job function and/or work location. </p>
-
                     </div>
                     <div class="custom-control custom-radio">
                         <input asp-for="RequestTypeId" value="5" type="radio" class="custom-control-input" id="leaving">
                         <label class="custom-control-label label-edit" for="leaving"> Leaving Probation </label>
                         <p> -Initiates removal of ALL system(s) access. </p>
                     </div>
+                    <div class="custom-control custom-radio">
+                        <input asp-for="RequestTypeId" value="11" type="radio" class="custom-control-input" id="addAccess">
+                        <label class="custom-control-label label-edit" for="addAccess">Add Access</label>
+                        <p> -Initiates additional system(s) access (Bureau Chief's signature required). </p>
+
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input asp-for="RequestTypeId" value="12" type="radio" class="custom-control-input" id="removeAccess">
+                        <label class="custom-control-label label-edit" for="removeAccess"> Remove Access </label>
+                        <p> -Initiates removal access for individual system(s). </p>
+                    </div>
                 </div>
                 <div class="alert alert-dismissible alert-success">
-                    <strong>Important: </strong> Please submit a seperate system registraction packet to remove your current
+                    <strong>Important: </strong> Please submit a seperate system registration form to remove your current
                     systems access with the <strong>"Transfer"</strong> request.
                 </div>
             </div>
         </div>
+        <!--
         <div class="step">
             <div class="shadow-container">
                 <div class="accordion" id="accordionExample">
                     <div class="alert alert-info">
                         Step 2 - Select Bureau and job function
                     </div>
-                    <!--
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h5 class="mb-0">
@@ -208,7 +206,6 @@
                             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                         </div>
                     </div>
-                    -->
                 </div>
             </div>
         </div>
@@ -318,13 +315,13 @@
                 </div>
             </div>
         </div>
+        -->
         <div class="step">
             <div class="jumbotron" style="text-align:center">
                 <h1>Thank you for submitting your request.</h1> <br\>
                     <h1> Your requests will be processed by the department.</h1>
             </div>
         </div>
-    </form>
     <button type="button" class="btn btn-info float-left m-3" id="draft"> Save Draft </button>
     <button type="button" class="btn btn-info float-right m-3" id="next" onclick="nextPrev(1)" style="margin-left: 6px;"> Next </button>
     <button type="button" class="btn btn-info float-right m-3" id="prev" onclick="nextPrev(-1)" style="margin-left: 6px;"> Previous </button>
@@ -333,6 +330,7 @@
         <a type="button" class="btn btn-info" id="view" style="display: none" href=""> Preview </a>
         <a type="button" class="btn btn-info" id="submitAgain" style="display: none" href="/Home/NewRegistrations"> Submit Another </a>
     </div>
+    </form>
     <script>
         /*----------------------------------------------------------
             [ Script for proceeding to next step ]
@@ -374,7 +372,8 @@
             showStep(currentStep);
         }
         function progressBar(n) {
-            var progressMeter = n * 25;
+            var x = document.getElementsByClassName("step");
+            var progressMeter = n * (100 / x.length);
             document.getElementById("pBar").style.width = progressMeter + "%";
             document.getElementById("pBar").innerHTML = progressMeter.toString() + "% Complete";
         }
