lots of changes + switching to laptop

--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -121,6 +121,20 @@
     height: 25px;
 }
 /*----------------------------------------------------------
+    [ Loading Modal ]
+*/
+.bd-example-modal-lg .modal-dialog{
+    display: table;
+    position: relative;
+    margin: 0 auto;
+    top: calc(50% - 24px);
+  }
+  
+  .bd-example-modal-lg .modal-dialog .modal-content{
+    background-color: transparent;
+    border: none;
+  }
+/*----------------------------------------------------------
     [ Scroll Bar Styling ]
 */
 /* width */
