--- a/PAM/Views/Home/Registrations.cshtml
+++ b/PAM/Views/Home/Registrations.cshtml
@@ -1,10 +1,12 @@
-﻿@{
+﻿@model IEnumerable<PAM.Models.Request>
+
+@{
     ViewData["Title"] = "Registrations";
 }
 
 <body>
     <p style="font-size: 40px;">Registration Requests
-        <a href="/Home/NewRegistrations" type="button" class="btn btn-info float-right">+ New Request</a>
+        <a asp-controller="Request" asp-action="CreateRequester" class="btn btn-info float-right">+ New Request</a>
     </p>
         <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -31,52 +33,49 @@
                             <th scope="col"> Action </th>
                         </tr>
                     </thead>
+               @foreach (var item in Model)
+               {
                     <tr>
-                        <th scope="row"> 1 </th>
-                        <td> Form Name</td>
-                        <td> New Hire / Draft </td>
-                        <td> Default: Email, Internet, Network </td>
-                        <td> Self </td>
-                        <td> Approved </td>
+                        <td>@Html.DisplayFor(modelItem => item.RequestId)</td>
+                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
                         <td>
-                            <a href=""> View </a>
+                            @{
+                                switch (item.RequestTypeId)
+                                {
+                                    case 1:
+                                        <text> New Hire </text>
+                                        break;
+                                    case 2:
+                                        <text> Transfer </text>
+                                        break;
+                                    case 4:
+                                        <text> Portfolio Assignment </text>
+                                        break;
+                                    case 5:
+                                        <text> Leaving Probation </text>
+                                        break;
+                                    case 11:
+                                        <text> Add Access </text>
+                                        break;
+                                    case 12:
+                                        <text> Remove Access </text>
+                                        break;
+                                    default:
+                                        <text> Invalid Requests </text>
+                                        break;
+                                }
+                            }
+                        </td>
+                        <td>@Html.DisplayFor(modelItem => item.SumbittedOn)</td>
+                        <td>@Html.DisplayFor(modelItem => item.RequestStatus)</td>
+                        <td>@Html.DisplayFor(modelItem => item.RequestStatus)</td>
+                        <td>
+                            <a asp-action="Edit">Edit</a> |
+                            <a asp-action="View">View</a> |
+                            <a asp-action="Delete" asp-route-id="@item.RequestId">Delete</a>
                         </td>
                     </tr>
-                    <tr>
-                        <th scope="row"> 2 </th>
-                        <td> Form Name</td>
-                        <td> New Hire / Draft </td>
-                        <td> Default: Email, Internet, Network </td>
-                        <td> Self </td>
-                        <td> Approved </td>
-                        <td>
-                            <a href=""> View </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row"> 3 </th>
-                        <td> Form Name</td>
-                        <td> New Hire / Draft </td>
-                        <td> Default: Email, Internet, Network </td>
-                        <td> Self </td>
-                        <td> Approved </td>
-                        <td>
-                            <a href=""> View </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row"> 4 </th>
-                        <td> Form Name</td>
-                        <td> New Hire / Draft </td>
-                        <td> Default: Email, Internet, Network </td>
-                        <td> Self </td>
-                        <td> Draft </td>
-                        <td>
-                            <a href=""> View </a> <br/> 
-                            <a href=""> Edit </a> <br/>
-                            <a href=""> Delete </a>
-                        </td>
-                    </tr>
+                }
                 </table>
             </div>
             <div class="tab-pane fade" id="status">
