--- a/PAM/Views/Request/NewRequest.cshtml
+++ b/PAM/Views/Request/NewRequest.cshtml
@@ -1,7 +1,11 @@
-﻿@model PAM.Models.Request
+﻿@using PAM.Models
+@using PAM.Extensions
+@model PAM.Models.Request
 
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @{
-    ViewData["Title"] = "New";
+    var requester = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("Requester");
+    ViewData["Title"] = "New Request";
 }
 
 <body>
@@ -13,7 +17,9 @@
              aria-valuemin="0" aria-valuemax="100">
         </div>
     </div>
-    <form asp-controller="Request" asp-action="Create" method="post">
+    <form asp-controller="Request" asp-action="CreateRequest" method="post">
+        <input asp-for="RequestedById" value=@requester.RequesterId type="hidden" />
+        <input asp-for="RequestedForId" value=@requester.RequesterId type="hidden"/>
         <div class="step">
             <p>Complete the registration process by following a few simple steps.</p>
             <div class="shadow-container">
@@ -27,9 +33,14 @@
                         <p> -Initiates first time registrations for new users and systems access. </p>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input asp-for="RequestId" value="2" type="radio" class="custom-control-input" id="transfer">
+                        <input asp-for="RequestTypeId" value="2" type="radio" class="custom-control-input" id="transfer">
                         <label class="custom-control-label label-edit" for="transfer"> Transfer </label>
                         <p> -Initiates changes to existing information when transferring caseload, job function and/or work location. </p>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input asp-for="RequestTypeId" value="4" type="radio" class="custom-control-input" id="portfolio">
+                        <label class="custom-control-label label-edit" for="portfolio"> Portfolio Assignment </label>
+                        <p> -Initiates the update of information for the portfolio. </p>
                     </div>
                     <div class="custom-control custom-radio">
                         <input asp-for="RequestTypeId" value="5" type="radio" class="custom-control-input" id="leaving">
@@ -40,7 +51,6 @@
                         <input asp-for="RequestTypeId" value="11" type="radio" class="custom-control-input" id="addAccess">
                         <label class="custom-control-label label-edit" for="addAccess">Add Access</label>
                         <p> -Initiates additional system(s) access (Bureau Chief's signature required). </p>
-
                     </div>
                     <div class="custom-control custom-radio">
                         <input asp-for="RequestTypeId" value="12" type="radio" class="custom-control-input" id="removeAccess">
@@ -330,7 +340,17 @@
         <a type="button" class="btn btn-info" id="view" style="display: none" href=""> Preview </a>
         <a type="button" class="btn btn-info" id="submitAgain" style="display: none" href="/Home/NewRegistrations"> Submit Another </a>
     </div>
+
     </form>
+
+    <div class="modal fade bd-example-modal-lg" data-backdrop="static" data-keyboard="false" tabindex="-1">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content" style="width: 48px">
+                <span class="fade fa-spinner fa-spin fa-3x"></span>
+            </div>
+        </div>
+    </div>
+
     <script>
         /*----------------------------------------------------------
             [ Script for proceeding to next step ]
@@ -349,6 +369,7 @@
             }
             if (n == (x.length - 2)) {
                 document.getElementById("next").type = "submit";
+                document.getElementById("next").onclick = "modal();"
                 document.getElementById("next").innerHTML = "Submit";
             } else {
                 document.getElementById("next").innerHTML = "Next";
@@ -377,6 +398,11 @@
             document.getElementById("pBar").style.width = progressMeter + "%";
             document.getElementById("pBar").innerHTML = progressMeter.toString() + "% Complete";
         }
-
+        function modal() {
+            $('modal').modal('show');
+            setTimeout(function () {
+                $('.modal').modal('hide');
+            }, 2000);
+        }
     </script>
 </body>
