--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@model PAM.Models.Employee
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -20,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Home/MyRegistrations">Registrations</a>
+                    <a class="nav-link" href="/Home/Registrations">Registrations</a>
                 </li>
                 <!--
                 <li class="nav-item active">
