--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
                     <label for="password">Password</label>
                     <input name="password" class="form-control" type="password" data-val-required="Password is required." placeholder="Password" />
                 </div>
-                <button type="submit" class="btn btn-info btn-block" value="submit"> Login </button>
+                <button type="submit" class="btn btn-info btn-block" value="submit" style="margin-top:40px;"> Login </button>
             </form>
             <!--
             <p>
