--- a/PAM/Views/Request/NewRequest.cshtml
+++ b/PAM/Views/Request/NewRequest.cshtml
@@ -122,7 +122,85 @@
                         <input type="text" class="form-control" id="functionTitle" placeholder="" />
                     </div>
                 </div>
+            </div>
+        </div>
+        <!--
+            
+        <div class="step">
+            <div class="shadow-container">
+                <div class="alert alert-info">
+                    Step 3 - Additional Information of your Request
+                </div>
+                <h3> Please select all that apply. </h3>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" checked="" />
+                    <label class="custom-control-label" for="customCheck1"> Contractor </label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" checked="" />
+                    <label class="custom-control-label" for="customCheck1"> High Profile</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" checked="" />
+                    <label class="custom-control-label" for="customCheck1"> Global Access </label>
+                </div>
+                <div class="form-group">
+                    <fieldset>
+                        <label class="control-label" for="readOnlyInput">Caseload Type</label>
+                        <input class="form-control" id="readOnlyInput" type="text" placeholder="" readonly="">
+                    </fieldset>
+                </div>
+                <div class="form-group">
+                    <fieldset>
+                        <label class="control-label" for="readOnlyInput">Caseload Function</label>
+                        <input class="form-control" id="readOnlyInput" type="text" placeholder="" readonly="">
+                    </fieldset>
+                </div>
+                <div class="form-group">
+                    <fieldset>
+                        <label class="control-label" for="readOnlyInput">Caseload Number</label>
+                        <input class="form-control" id="readOnlyInput" type="text" placeholder="" readonly="">
+                    </fieldset>
+                </div>
+                <div class="form-group">
+                    <fieldset>
+                        <label class="control-label" for="readOnlyInput">Departure Reason</label>
+                        <input class="form-control" id="readOnlyInput" type="text" placeholder="" readonly="">
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+        -->
                 <!--
+        <div class="step">
+            <div class="shadow-container">
+                <div class="alert alert-info">
+                    Step 4 - Add Additional Systems
+                </div>
+                <div class="shadow-container" style="width: 50%;">
+                    <h5> System Name </h5>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
+                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
+                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
+                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
+                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
+                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
+                    </div>
+                </div>
+            </div>
                 <div class="step">
                     <div class="shadow-container">
                         <div class="accordion" id="accordionExample">
@@ -277,8 +355,6 @@
                         </div>
                     </div>
                 </div>
-                -->
-                <!--
                 <hr />
                 <div class="form-row">
                     <div class="form-group col-md-4">
@@ -297,49 +373,6 @@
                     </div>
                 </div>
                 -->
-            </div>
-        </div>
-        <div class="step">
-            <div class="shadow-container">
-                <div class="alert alert-info">
-                    Step 3 - Additional Information of your Request
-                </div>
-                <div class="custom-control custom-checkgox">
-                    <input type="checkbox" class="custom-control-input" checked="" />
-                    <label class="custom-control-label" for="customCheck1"> High Profile</label>
-                </div>
-            </div>
-        </div>
-        <div class="step">
-            <div class="shadow-container">
-                <div class="alert alert-info">
-                    Step 4 - Add Additional Systems
-                </div>
-                <div class="shadow-container" style="width: 50%;">
-                    <h5> System Name </h5>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
-                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
-                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
-                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
-                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
-                        <label class="custom-control-label" for="customCheck1">Placeholder System Name -> (ABBREVIATION)</label>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="step">
             <div class="jumbotron" style="text-align:center">
                 <h1>Thank you for submitting your request.</h1> <br\>
@@ -347,10 +380,8 @@
             </div>
         </div>
         <button type="button" class="btn btn-info float-left m-3" id="draft"> Save Draft </button>
-        <button type="button" class="btn btn-info float-right m-3" id="next"
-                data-toggle="modal" data-target="#exampleModal" onclick="nextPrev(1)" style="margin-left: 6px;">
-        Next
-        </button>
+        <button type="button" class="btn btn-info float-right m-3" id="next" onclick="nextPrev(1)" style="margin-left: 6px;"
+                data-toggle="modal" data-target="#selfConfirm"> Next </button>
         <button type="button" class="btn btn-info float-right m-3" id="prev" onclick="nextPrev(-1)" style="margin-left: 6px;"> Previous </button>
 
         <div class="text-center">
@@ -360,13 +391,13 @@
     </form>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="selfConfirm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-body" style="font-size: 20px; text-align:center;">
-                    Request for self? or another?                 
+                    Request for self? Or another?                 
                 </div>
-                <div class="modal-footer" >
+                <div class="modal-footer">
                     <button type="button" class="btn btn-info btn-sm" data-dismiss="modal">Another</button>
                     <button type="button" class="btn btn-success btn-sm" data-dismiss="modal">Self</button>
                 </div>
@@ -384,11 +415,15 @@
             // This function will display the specified tab of the form...
             var x = document.getElementsByClassName("step");
             x[n].style.display = "block";
-            //... and fix the Previous/Next buttons:
+            //Show previous button only after next has been clicked 
             if (n == 0) {
                 document.getElementById("prev").style.display = "none";
             } else {
                 document.getElementById("prev").style.display = "inline";
+            }
+            //Changes modal ID to only apply after first step
+            if (n == 2) {
+                document.getElementById("selfConfirm").id = "confirmed";
             }
             if (n == (x.length - 2)) {
                 document.getElementById("next").type = "submit";
