--- a/PAM/Views/Home/Registrations.cshtml
+++ b/PAM/Views/Home/Registrations.cshtml
@@ -4,7 +4,7 @@
 
 <body>
     <p style="font-size: 40px;">Registration Requests
-        <a asp-controller="Request" asp-action="CreateRequester" class="btn btn-info float-right">+ New Request</a>
+        <a asp-controller="Request" asp-action="CreateRequester" method="get" class="btn btn-info float-right">+ New Request</a>
     </p>
         <ul class="nav nav-tabs">
             <li class="nav-item">
